Google button sizing issue #9, Adjusted sizing of the bio lead image, to better accommodate the fixed action button on mobile. Lead image is also not top aligned, instead of centered.

--- a/src/sass/bio.scss
+++ b/src/sass/bio.scss
@@ -9,9 +9,9 @@
         position: relative;
         img {
             position: absolute;
-            top: 50%;
+            top: 0;
             left: 50%;
-            transform: translate(-50%, -50%);
+            transform: translateX(-50%);
         }
     }
     .valign {
@@ -20,11 +20,11 @@
     @media #{$small-and-down} {
         .img-wrapper {
             width: 100%;
-            height: 50%;
-            min-height: 50vh;
+            height: 40%;
+            min-height: 40vh;
             img {
-                height: 100%;
-                width: auto;
+                width: 100%;
+                height: auto;
             }
         }
         .valign-wrapper {
